# mfmt

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/actions/: action.yml
.github/workflows/: check_py.yml  ci.yml
docker/: Dockerfile  Dockerfile.vaporetto
src/mfmt/: cli.py  juman.py  kytea.py  mecab.py  vaporetto.py
tests/: kytea.txt  test_juman.py  test_kytea.py  test_mecab.py  test_vaporetto.py
tests/juman/: input.txt  output_kytea.txt  output_mecab.txt
tests/kytea/: output_mecab.txt
tests/mecab/: input.txt  output_juman.txt  output_kytea.txt
