[project]
name = "mfmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
]

[project.scripts]
mfmt = "mfmt.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mfmt"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
