[project]
name = "mfmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
]

[project.scripts]
mfmt = "mfmt.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mfmt"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
line-length = 88
lint.select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
    "D", # pydocstyle
]
lint.ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in `__init__`
    "D203", # 1 blank line required before class docstring
]

[tool.mypy]
files = ["src", "tests"]
ignore_missing_imports = true
